--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 android {
-    compileSdkVersion 25
-    buildToolsVersion "26.0.0"
+    buildToolsVersion = '25.0.2'
+    compileSdkVersion = 25
     defaultConfig {
         applicationId 'com.wangpeng.mykotlinapplication'
         minSdkVersion 15
