--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 android {
     buildToolsVersion = '25.0.2'
     compileSdkVersion = 25
@@ -10,6 +12,9 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    }
+    dataBinding {
+        enabled true
     }
     buildTypes {
         release {
@@ -45,5 +50,9 @@ dependencies {
     compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     compile 'com.android.support:recyclerview-v7:25.0.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    kapt "com.android.databinding:compiler:2.3.0"
     testCompile 'junit:junit:4.12'
+}
+kapt {
+    generateStubs = true
 }
