--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:latest.release'
     compile 'com.squareup.retrofit2:converter-gson:latest.release'
     compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    compile 'com.github.bumptech.glide:glide:3.8.0'
     compile 'com.android.support:recyclerview-v7:25.0.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     kapt "com.android.databinding:compiler:2.3.0"
